@startuml
' ═══════════════════════════════════════════════════════════════
'  ENSTAB House — UML Class Diagram
' ═══════════════════════════════════════════════════════════════

skinparam shadowing false
skinparam classBackgroundColor #FEFEFE
skinparam classBorderColor #444444
skinparam classArrowColor #444444
skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam packageBorderColor #9E0815
skinparam packageFontColor #9E0815
skinparam packageFontStyle bold
skinparam ArrowColor #444444

' ═══════════════════════════════════════════════════════════════
'  PACKAGE: Models
' ═══════════════════════════════════════════════════════════════

package "Models" {

  enum DocumentType {
    pfa
    pfe
    collaboration
  }

  class AppUser {
    + uid       : String
    + name      : String
    + email     : String
    + phone     : String
    + role      : String
    + createdAt : DateTime
    --
    + isAdmin()       : bool
    + canCreatePost() : bool
    + displayRole()   : String
  }

  class Post {
    + id          : String?
    + authorId    : String?
    + author      : String
    + category    : String
    + title       : String
    + description : String
    + postType    : String
    + likes       : int
    + comments    : int
    + likedBy     : List<String>
    + photos      : List<String>
    + documents   : List<String>
    + eventDate   : String?
    + eventTime   : String?
    + eventPlace  : String?
    + workshopTime        : String?
    + workshopPlace       : String?
    + workshopInstructor  : String?
    + createdAt   : DateTime
    --
    + fromFirestore(data : Map) : Post
    + toMap()       : Map<String, dynamic>
    + copyWith(...) : Post
    + timeAgo()     : String
  }

  class AcademicDocument {
    + id          : String?
    + title       : String
    + type        : DocumentType
    + studentName : String?
    + supervisor  : String?
    + year        : String
    + description : String
    + fileUrl     : String
    + fileName    : String
    + uploadedBy  : String
    + createdAt   : DateTime
    --
    + fromFirestore(data : Map) : AcademicDocument
    + toMap() : Map<String, dynamic>
  }

  class Semester {
    + id       : String
    + label    : String
    + subtitle : String
    + ues      : List<UE>
    --
    + totalMatieres()     : int
    + totalCoefficients() : double
  }

  class UE {
    + nom      : String
    + matieres : List<Matiere>
    --
    + totalCoefficients() : double
  }

  class Matiere {
    + nom         : String
    + coefficient : double
    + regime      : String
    --
    + requiresExamen() : bool
    + regimeLabel()    : String
  }
}

' ═══════════════════════════════════════════════════════════════
'  PACKAGE: Services
' ═══════════════════════════════════════════════════════════════

package "Services" {

  class PostService {
    - _firestore : FirebaseFirestore
    --
    + addPost(post : Post)             : Future<void>
    + getPosts()                       : Stream<List<Post>>
    + updatePost(post : Post)          : Future<void>
    + deletePost(postId : String)      : Future<void>
    + toggleLike(postId : String, userId : String) : Future<void>
    + addComment(postId : String, authorId : String, authorName : String, text : String) : Future<void>
    + getComments(postId : String)     : Stream<List<Map>>
    + deleteComment(postId : String, commentId : String) : Future<void>
  }

  class DocumentService {
    - _firestore  : FirebaseFirestore
    - _cloudinary : CloudinaryService
    --
    + addDocument(doc : AcademicDocument)              : Future<void>
    + getDocuments()                                   : Stream<List<AcademicDocument>>
    + getDocumentsByType(type : DocumentType)          : Stream<List<AcademicDocument>>
    + deleteDocument(docId : String, fileUrl : String) : Future<void>
    + uploadPdfWithProgress(file : File, name : String, onProgress : Function) : Future<String>
  }

  class UserService {
    - _firestore : FirebaseFirestore
    --
    + getAllUsers()                              : Stream<List<AppUser>>
    + getUserById(uid : String)                 : Future<AppUser?>
    + updateUserRole(uid : String, role : String) : Future<void>
  }

  class CloudinaryService {
    - _cloudName    : String
    - _uploadPreset : String
    --
    + uploadFile(file : File, name : String, folder : String) : Future<String>
  }

  class GradeCalculatorService {
    --
    + {static} calculerNoteMatiere(regime : String, controle : double?, examen : double?) : double?
    + {static} calculerMoyenneGenerale(ues : List<UE>, notes : Map<String, double?>) : double
    + {static} calculerResultatsUE(ues : List<UE>, notes : Map<String, double?>) : List<UEResult>
    + {static} matieresNonValidees(ues : List<UE>, notes : Map<String, double?>) : List<MatiereResult>
    + {static} validateNote(value : String?) : String?
  }

  class FilePickerHelper {
    --
    + {static} pickPdfFile(onError : Function)             : Future<File?>
    + {static} pickPhotosFromGallery(onError : Function)   : Future<List<File>>
    + {static} takePhotoWithCamera(onError : Function)     : Future<File?>
    + {static} pickDocuments(onError : Function)           : Future<List<File>>
  }
}

' ═══════════════════════════════════════════════════════════════
'  RELATIONSHIPS
' ═══════════════════════════════════════════════════════════════

' --- Model internal structure ---
Semester "1" *-- "1..*" UE      : contains >
UE       "1" *-- "1..*" Matiere : contains >
AcademicDocument --> DocumentType : has type >

' --- Post authored by AppUser ---
Post "0..*" --> "1" AppUser : authored by >

' --- AcademicDocument uploaded by AppUser ---
AcademicDocument "0..*" --> "1" AppUser : uploaded by >

' --- Service -> Model dependencies ---
PostService     ..> Post             : <<use>>
DocumentService ..> AcademicDocument : <<use>>
DocumentService ..> DocumentType     : <<use>>
UserService     ..> AppUser          : <<use>>
GradeCalculatorService ..> Semester  : <<use>>
GradeCalculatorService ..> UE        : <<use>>
GradeCalculatorService ..> Matiere   : <<use>>

' --- Service -> Service dependency ---
DocumentService ..> CloudinaryService  : <<use>>
DocumentService ..> FilePickerHelper   : <<use>>
PostService     ..> CloudinaryService  : <<use>>

@enduml
